--- a/package.json
+++ b/package.json
@@ -1,34 +1,42 @@
 {
-  "name": "piston-ui",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.5.0",
-    "@types/node": "^18.16.3",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "postcss-load-config": "^4.0.1",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
-    "svelte-preprocess": "^5.0.3",
-    "tailwindcss": "^3.1.5",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.3.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "@popperjs/core": "^2.11.7",
-    "classnames": "^2.3.2",
-    "flowbite": "^1.6.5",
-    "flowbite-svelte": "^0.34.9"
-  }
+	"name": "piston-ui",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.5.0",
+		"@types/node": "^18.16.3",
+		"autoprefixer": "^10.4.7",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
+		"rome": "12.0.0",
+		"svelte": "^3.54.0",
+		"svelte-check": "^3.0.1",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.1.5",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.3.0"
+	},
+	"type": "module",
+	"dependencies": {
+		"@codemirror/commands": "^6.2.3",
+		"@codemirror/language": "^6.6.0",
+		"@codemirror/state": "^6.2.0",
+		"@codemirror/view": "^6.10.0",
+		"@popperjs/core": "^2.11.7",
+		"brace": "^0.11.1",
+		"classnames": "^2.3.2",
+		"codemirror": "^6.0.1",
+		"flowbite": "^1.6.5",
+		"flowbite-svelte": "^0.34.9",
+		"svelte-codemirror-editor": "^1.1.0"
+	}
 }
